--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/*/*.env
 /*/.env.local
 /*/.env.local.php
 /*/.env.*.local
@@ -5,3 +6,24 @@
 /*/public/bundles/
 /*/var/
 /*/vendor/
+
+/*/node_modules
+/*/.pnp
+/*/.pnp.js
+
+# testing
+/*/coverage
+
+# production
+/*/build
+
+# misc
+/*/.DS_Store
+/*/.env.local
+/*/.env.development.local
+/*/.env.test.local
+/*/.env.production.local
+
+/*/npm-debug.log*
+/*/yarn-debug.log*
+/*/yarn-error.log*
