--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -18,7 +18,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: .
+        working-directory: ./terraform
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
@@ -29,9 +29,6 @@ jobs:
           role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
           aws-region: ${{ secrets.AWS_REGION }}
           role-session-name: GITHUB-OIDC-TERRAFORM
-          
-      - name: ls
-        run: ls -al
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -40,7 +37,7 @@ jobs:
 
       - name: Terraform format
         id: fmt
-        run: terraform -chdir=terraform fmt -check
+        run: terraform fmt -check
         continue-on-error: true
 
       - name: Terraform Init
@@ -49,15 +46,15 @@ jobs:
           AWS_BUCKET_NAME: ${{ secrets.AWS_S3_BUCKET }}
           AWS_BUCKET_KEY_NAME: ${{ github.event.repository.name }}.tfstate
           AWS_REGION: ${{ secrets.AWS_REGION }}
-        run: terraform -chdir=terraform init -backend-config="bucket=${AWS_BUCKET_NAME}" -backend-config="key=${AWS_BUCKET_KEY_NAME}" -backend-config="region=${AWS_REGION}"
+        run: terraform init -backend-config="bucket=${AWS_BUCKET_NAME}" -backend-config="key=${AWS_BUCKET_KEY_NAME}" -backend-config="region=${AWS_REGION}"
 
       - name: Terraform Validate
         id: validate
-        run: terraform -chdir=terraform validate -no-color
+        run: terraform validate -no-color
 
       - name: Terraform Plan
         id: plan
-        run: terraform -chdir=terraform plan -no-color
+        run: terraform plan -no-color
         if: github.event_name == 'pull_request'
         continue-on-error: true
 
@@ -104,4 +101,4 @@ jobs:
       
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform -chdir=terraform apply -auto-approve -input=false
+        run: terraform apply -auto-approve -input=false
